# bevy-rust

./: README.md
doggo/: Cargo.toml
doggo/json/: levels.json
doggo/src/: main.rs
doggo/src/game/: block.rs  cloud.rs  constants.rs  deadly_item.rs  elevator.rs  grass.rs  laser.rs  level_config.rs  mod.rs  player_sprite.rs  sky.rs  sky_bar.rs  stone.rs  sun.rs  world.rs
doggo/src/systems/: audio.rs  collision_detection.rs  ground_detection.rs  mod.rs  movement.rs  ui.rs
