[package]
name = "doggo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
#opt-level = 1

#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
bevy = { version = "0.14.2", features = ["default", "dynamic_linking"] }
bevy_rapier2d = "0.27.0"
bevy_sprite = "0.14.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0"
rand = "0.8"